--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>ホーム</title>
+    <script src="/static/javascripts/index.js"></script>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
 hello
