--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>ホーム</title>
-    <script src="/static/javascripts/index.js"></script>
     <style>
         * {
             padding: 0;
             margin: 0;
         }
     </style>
+    <script src="/static/javascripts/index.js"></script>
 </head>
 <body>
-hello
+<div id="main">
+    <main-app></main-app>
+</div>
 </body>
 </html>
